[package]
name = "closed01"
version = "0.5.0"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/closed01-rs"
description = "Provides checked floating point operations within the range [0,1]"
keywords = ["math", "numerics"]
include = ["src/lib.rs", "Cargo.toml", "LICENSE", "README.md"]
edition = "2018"

[dependencies]
num-traits = "0.2"
